<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_screen_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivArrowBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/arrow_right"
        android:rotation="180"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvCurrentBalanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/current_balance_title"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/ivArrowBack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:text="123"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalanceTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBank"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:shape="ring"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/cvBankImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_gradient_shape" />

        <TextView
            android:id="@+id/cvBankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:text="@string/banks_button"
            android:textColor="@color/gray" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCategory"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:shape="ring"
        app:layout_constraintTop_toBottomOf="@+id/cvBank"
        app:layout_constraintBottom_toTopOf="@+id/cvAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/cvCategoryImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_gradient_shape" />

        <TextView
            android:id="@+id/cvCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:text="@string/categories_button"
            android:textColor="@color/gray" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAdd"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:shape="ring"
        app:layout_constraintTop_toBottomOf="@+id/cvCategory"
        app:layout_constraintBottom_toTopOf="@+id/ivExpenseBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/cvAddImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_gradient_shape" />

        <TextView
            android:id="@+id/cvAddText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:text="@string/add_button"
            android:textColor="@color/gray" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivExpenseBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/expense_block"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivTransactionBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:translationY="20dp"
        android:background="@drawable/transaction_block"
        app:layout_constraintTop_toTopOf="@+id/ivExpenseBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="@+id/ivTransactionBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>